--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class='log-in-form'>
             <form id='log-in-form'>
                 <input type="text" name="username" value="" placeholder="Enter user name" style="height:50px;font-size:20pt;">
-                <input type="submit" value="Submit">
+                <input class='log-in-button' type="submit" value="Submit">
             </form>
         </div>
     </div>
