--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styles.css">
     <title>👹Gachamon</title>
+    <style>       
+        body {
+            cursor: url("./assets/ani-front/pikachu.gif"), default;
+        }
+    </style>
 </head>
 
 <body>
+    <div class='nav-bar' style="cursor: pointer;">
+        <a class='nav-profile'>Profile | </a>
+        <a class='nav-monsters'>Monsters | </a>
+        <a class='nav-inventory'>Inventory | </a>
+        <a class='nav-shop'>Shop | </a>
+        <a class='nav-balance'>Add balance | </a>
+        <a class='nav-logout'>Log out</a>
+
+    </div>
+
     <div class='home-page'>
         <h1>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/18557b188c60a77036b150c0462e8678.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/0d0dea7c90c0b7d97fd93402a520103e.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/da5be56335fa62870cac34d26389324b.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/cb816fe266fbc861755ca97c973afe96.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/0d0dea7c90c0b7d97fd93402a520103e.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/1dab04507e0d52542cd2584871da2f09.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/bf3ab313f74bdb3503856425c7f6e163.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/0afb80c3434c0220f24aa192bee62e1c.png" alt="pokemon-font" border="0"></a></span>
-            <span><a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/200504/2405b8a9a816ecfbeddfce92fd34da97.png" alt="pokemon-font" border="0"></a></span>
+            <span><img src="https://fontmeme.com/permalink/200504/18557b188c60a77036b150c0462e8678.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/0d0dea7c90c0b7d97fd93402a520103e.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/da5be56335fa62870cac34d26389324b.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/cb816fe266fbc861755ca97c973afe96.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/0d0dea7c90c0b7d97fd93402a520103e.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/1dab04507e0d52542cd2584871da2f09.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/bf3ab313f74bdb3503856425c7f6e163.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/0afb80c3434c0220f24aa192bee62e1c.png" alt="pokemon-font" border="0"></span>
+            <span><img src="https://fontmeme.com/permalink/200504/2405b8a9a816ecfbeddfce92fd34da97.png" alt="pokemon-font" border="0"></span>
         </h1>
         <div class='log-in-form'>
             <form id='log-in-form'>
