monster collection page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     <div class='nav-bar' style="cursor: pointer;">
         <a class='nav-profile'>Profile | </a>
-        <a class='nav-monsters'>Monsters | </a>
+        <a class='nav-monsters'>My Monsters | </a>
+        <a class='nav-monsters-collection'>All Monsters | </a>
         <a class='nav-inventory'>Inventory | </a>
         <a class='nav-shop'>Shop | </a>
         <a class='nav-balance'>Add balance | </a>
