modify clearpage() and navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 </head>
 
 <body>
-
+    <div class='nav-bar' style="cursor: pointer;">
+        <a class='nav-profile'>Profile | </a>
+        <a class='nav-monsters'>My Monsters | </a>
+        <a class='nav-monsters-collection'>All Monsters | </a>
+        <a class='nav-inventory'>Inventory | </a>
+        <a class='nav-shop'>Shop | </a>
+        <a class='nav-balance'>Add balance | </a>
+        <a class='nav-logout'>Log out</a>
+    </div>
+    
     <div class='home-page'>
         <h1>
             <span><img src="https://fontmeme.com/permalink/200504/18557b188c60a77036b150c0462e8678.png" alt="pokemon-font" border="0"></span>
