change ccursor and add egg pics

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>👹Gachamon</title>
     <style>       
         body {
-            cursor: url("./assets/ani-front/pikachu.gif"), default;
+            cursor: url("./assets/mario-gif/cursor3.png"), default;
         }
     </style>
 </head>
@@ -22,7 +22,7 @@
         <a class='nav-balance'>Add balance | </a>
         <a class='nav-logout'>Log out</a>
     </div>
-    
+
     <div class='home-page'>
         <h1>
             <span><img src="https://fontmeme.com/permalink/200504/18557b188c60a77036b150c0462e8678.png" alt="pokemon-font" border="0"></span>
