quality of life changes & BGM

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             cursor: url("./assets/mario-gif/cursor3.png"), default;
         }
     </style>
+    <audio class="audio-player" controls loop><source src="./assets/mp3/bgm1.mp3" type="audio/mpeg">  </audio>
 </head>
 
 <body>
